add path for notebook

--- a/SQID automatic pipeline.ipynb
+++ b/SQID automatic pipeline.ipynb
@@ -11,7 +11,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Set up environment variables with location of the input files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: kgtk_files=kgtk_files/\n",
+      "env: ttl_files=ttl_files/\n",
+      "env: ES_DATA_FOLDER_PATH=flask/es/es_data/\n"
+     ]
+    }
+   ],
+   "source": [
+    "%env kgtk_files=kgtk_files/\n",
+    "%env ttl_files=ttl_files/\n",
+    "%env ES_DATA_FOLDER_PATH = flask/es/es_data/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Building Wikidata triples and Mediawiki json files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pharma_subgraph.tsv link: https://drive.google.com/file/d/11oAhqCNR8vAIKXv0IhuIcy-L6NuDFxKF/view?usp=sharing"
    ]
   },
   {
@@ -27,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cat kgtk_files/pharma_subgraph.tsv kgtk_files/pharma_subgraph.tsv \\\n",
+    "!cat kgtk_files/pharma_subgraph.tsv \\\n",
     "| kgtk generate_wikidata_triples -pf flask/flask_data/wikidata_properties.tsv -w yes -pd yes > pharma_subgraph.ttl --debug"
    ]
   },
@@ -53,9 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp kgtk_files/pharma_subgraph.tsv flask/es/es_data/pharma_subgraph.tsv\n",
+    "!cp kgtk_files/pharma_subgraph.tsv ES_DATA_FOLDER_PATH/pharma_subgraph.tsv\n",
     " \n",
-    "!cat flask/es/es_data/pharma_subgraph.tsv flask/es/es_data/pharma_subgraph.tsv \\\n",
+    "!cat ES_DATA_FOLDER_PATH/pharma_subgraph.tsv \\\n",
     "| kgtk generate-mediawiki-jsons -pf flask/flask_data/wikidata_properties.tsv -w yes -pd yes"
    ]
   },
@@ -65,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mv *.jsonl flask/es/es_data/"
+    "!mv *.jsonl ES_DATA_FOLDER_PATH/"
    ]
   },
   {
@@ -102,6 +137,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "0. Install all required libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd flask && pip install -r requirement.txt\n",
+    "!npm install ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "0. Modify Configuration file (Global configure)\n",
     "Parameters:\n",
     "- HOST = \"localhost\"\n",
@@ -109,7 +161,8 @@
     "- SPARQL_PORT = 10002\n",
     "- FLASK_PORT = 5556\n",
     "- ES_INDEX = \"kgtk_files\"\n",
-    "- ELASTICSEARCH_PORT = 9200"
+    "- ELASTICSEARCH_PORT = 9200\n",
+    "- ES_DATA_FOLDER_PATH = \"/home/mingyuet/sqid/flask/es/es_data\""
    ]
   },
   {
@@ -232,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
