--- a/SQID automatic pipeline.ipynb
+++ b/SQID automatic pipeline.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Below is a step-by-step example that how the pharma_subgraph KG used for SQID is built"
+    "# Below is a step-by-step example that how the pharma_subgraph KG used for SQID is built"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building Wikidata triples and Mediawiki json files"
+    "## Building Wikidata triples and Mediawiki json files"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Generate Wikidata Triples (under sqid/ttl_files) from KGTK TSV (pharma_subgraph) -- kgtk generate_wikidata_triples"
+    "### Generate Wikidata Triples (under sqid/ttl_files) from KGTK TSV (pharma_subgraph) -- kgtk generate_wikidata_triples"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Generate Mediawiki JSON (under sqid/flask/es/es_data/) from KGTK TSV -- kgtk generate-mediawiki-jsons"
+    "### Generate Mediawiki JSON (under sqid/flask/es/es_data/) from KGTK TSV -- kgtk generate-mediawiki-jsons"
    ]
   },
   {
@@ -104,40 +104,48 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load trile file into Blazegraph (Rijul is doing this Part)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Load trile file into Blazegraph"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/sh: line 0: cd: ES_DATA_FOLDER_PATH/: No such file or directory\r\n"
+     ]
+    }
+   ],
    "source": [
-    "### Rijul can fill in this part"
+    "!cd ES_DATA_FOLDER_PATH/ && ls | wc -l"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### load json file into ES"
+    "## Load trile file into Blazegraph"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "0. Install all required libraries"
+    "Given triple files loaded into Blazegraph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load json file into ES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install all required libraries"
    ]
   },
   {
@@ -146,6 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!python3 -m venv sqid-env\n",
+    "!source sqid-env/bin/activate\n",
+    "\n",
     "!cd flask && pip install -r requirement.txt\n",
     "!npm install ."
    ]
@@ -154,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "0. Modify Configuration file (Global configure)\n",
+    "### Modify Configuration file (Global configure)\n",
     "Parameters:\n",
     "- HOST = \"localhost\"\n",
     "- SQID_PORT = 8052\n",
@@ -166,10 +177,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "import argparse\r\n",
+      "\r\n",
+      "parser = argparse.ArgumentParser(description='Enter congiguration parameters')\r\n",
+      "parser.add_argument('--is_generate', type=bool, help='is_generate', default=False)\r\n",
+      "args = parser.parse_args()\r\n",
+      "\r\n",
+      "HOST = \"localhost\"\r\n",
+      "SQID_PORT = 8052\r\n",
+      "SPARQL_PORT = 11102\r\n",
+      "FLASK_PORT = 5556\r\n",
+      "ES_INDEX = \"kgtk_files\"\r\n",
+      "ELASTICSEARCH_PORT = 9200\r\n",
+      "is_generate = args.is_generate\r\n",
+      "\r\n",
+      "# Flask application config\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head -n 15 global_config.py"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create Index for ES"
+    "### Create Index for ES"
    ]
   },
   {
@@ -186,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. import index data from es_data (mediawiki json files)"
+    "### import index data from es_data (mediawiki json files)"
    ]
   },
   {
@@ -211,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Run Global Configure File to generate endpoints for SQID and ES"
+    "### Run Global Configure File to generate endpoints for SQID and ES"
    ]
   },
   {
@@ -227,38 +269,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Run ES index system using Flask\n",
+    "### Run ES index system using Flask\n",
     "\n",
     "and\n",
     "\n",
-    "5. Run SQID through npm run serve (development enviorment)"
+    "### Run SQID through npm run serve (development enviorment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Begin Loading Property File Info\n",
-      "flask_data/wikidata_properties.tsv\n",
-      "# Done Loading Property File Info\n",
-      " * Serving Flask app \"app\" (lazy loading)\n",
-      " * Environment: production\n",
-      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
-      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
-      " * Debug mode: on\n",
-      "# Begin Loading Property File Info\n",
-      "flask_data/wikidata_properties.tsv\n",
-      "# Done Loading Property File Info\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!sh run_services.sh"
+    "import subprocess\n",
+    "out = subprocess.call(\"ls -l\", shell=True)\n",
+    "out = subprocess.call(\"cd ..\", shell=True)"
    ]
   },
   {
