--- a/SQID automatic pipeline.ipynb
+++ b/SQID automatic pipeline.ipynb
@@ -308,24 +308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "usage: ipykernel_launcher.py [-h] [--is_generate IS_GENERATE]\n",
-      "ipykernel_launcher.py: error: unrecognized arguments: -f /home/mingyuet/.local/share/jupyter/runtime/kernel-2bff5bcd-7571-4b0e-b4a9-3628320973dd.json\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "2",
+     "ename": "TabError",
+     "evalue": "inconsistent use of tabs and spaces in indentation (global_config.py, line 42)",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/mingyuet/.local/lib/python3.7/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3417\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-6f8e711c75dc>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from global_config import ES_INDEX\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/mingyuet/sqid/global_config.py\"\u001b[0;36m, line \u001b[0;32m42\u001b[0m\n\u001b[0;31m    is_generate = args.is_generate\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mTabError\u001b[0m\u001b[0;31m:\u001b[0m inconsistent use of tabs and spaces in indentation\n"
      ]
     }
    ],
